ta - small alignment and layout fixes for cosmos-rpg

--- a/bin/css/sys.silcore.css
+++ b/bin/css/sys.silcore.css
@@ -5,17 +5,12 @@
   box-sizing: border-box;
 }
 .cs.sheet {
-  -webkit-align-content: flex-start;
-      -ms-flex-line-pack: start;
-          align-content: flex-start;
+  align-content: flex-start;
+  background: #fff;
   border: 0;
   box-shadow: 1px 1px 15px #eeeeee, -1px -1px 15px #eeeeee;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: row wrap;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
   height: 11in;
   width: 8.5in;
   padding: .25in;
@@ -26,41 +21,23 @@
 }
 .cs.sheet .row,
 .cs.sheet .col {
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
 }
 .cs.sheet .row {
-  -webkit-align-items: flex-start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-align-content: flex-start;
-      -ms-flex-line-pack: start;
-          align-content: flex-start;
-  -webkit-flex: 1 1 calc(90%);
-      -ms-flex: 1 1 calc(90%);
-          flex: 1 1 calc(90%);
-  -webkit-flex-flow: row wrap;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  align-items: flex-start;
+  align-content: flex-start;
+  flex: 1 1 calc(90%);
+  flex-flow: row wrap;
 }
 .cs.sheet .col {
-  -webkit-flex: 1 1 calc(20%);
-      -ms-flex: 1 1 calc(20%);
-          flex: 1 1 calc(20%);
-  -webkit-flex-flow: column wrap;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
+  flex: 1 1 calc(20%);
+  flex-flow: column wrap;
 }
 .cs.sheet .col.c-2 {
-  -webkit-flex: 1 1 calc(50%);
-      -ms-flex: 1 1 calc(50%);
-          flex: 1 1 calc(50%);
+  flex: 1 1 calc(50%);
 }
 .cs.sheet .col.c-3 {
-  -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+  flex: 1 1 auto;
 }
 .cs.sheet .col.no-margin {
   margin: 0;
@@ -108,12 +85,13 @@
 /* SilCore Specific Rules */
 .cs.silcore .row .header {
   border-width: 0 0 1px 0;
+  -webkit-border-image: linear-gradient(left, #003366, #2eccfa 40%, #ffffff) 100% 1;
   -khtml-border-image: linear-gradient(left, #003366, #2eccfa 40%, #ffffff) 100% 1;
+  -moz-border-image: linear-gradient(left, #003366, #2eccfa 40%, #ffffff) 100% 1;
+  -o-border-image: linear-gradient(left, #003366, #2eccfa 40%, #ffffff) 100% 1;
   border-image: linear-gradient(left, #003366, #2eccfa 40%, #ffffff) 100% 1;
   color: #333;
-  -webkit-flex: 1 1 100%;
-      -ms-flex: 1 1 100%;
-          flex: 1 1 100%;
+  flex: 1 1 100%;
   font-family: Ubuntu;
   font-size: 0.8rem;
   font-weight: bold;
@@ -136,39 +114,27 @@
   border-bottom: 1px solid;
   font-size: 1.5rem;
   font-weight: bold;
-  -webkit-justify-content: flex-end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
   padding: 8px;
 }
 .cs.silcore .picture {
   border: 20px solid #eee;
   box-shadow: -1px -1px 0 0 rgba(0, 0, 0, 0.7), 1px 1px 0 0 rgba(0, 0, 0, 0.7), 1px -1px 0 0 rgba(0, 0, 0, 0.7), -1px 1px 0 0 rgba(0, 0, 0, 0.7), inset 2px 2px 8px 0 rgba(0, 0, 0, 0.7), inset -2px -2px 8px 0 rgba(0, 0, 0, 0.3);
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
   background-size: cover;
   background-position: center center;
   padding-bottom: 100%;
 }
 .cs.silcore .entry {
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-flex;
-  display: -ms-flexbox;
+  align-items: center;
   display: flex;
-  -webkit-flex: 0 0 calc(46%);
-      -ms-flex: 0 0 calc(46%);
-          flex: 0 0 calc(46%);
+  flex: 0 0 calc(46%);
   font-size: .80rem;
   margin: 0 2px;
   padding: 5px;
 }
 .cs.silcore .entry > * {
-  -webkit-flex: 1 1;
-      -ms-flex: 1 1;
-          flex: 1 1;
+  flex: 1 1;
   text-align: center;
 }
 .cs.silcore .entry > .name {
@@ -187,33 +153,21 @@
   min-width: 60%;
 }
 .cs.silcore .equipment .entry {
-  -webkit-flex: 1 1 100%;
-      -ms-flex: 1 1 100%;
-          flex: 1 1 100%;
+  flex: 1 1 100%;
 }
 .cs.silcore .equipment .entry .name {
   min-width: 40%;
 }
 .cs.silcore .two-up {
-  -webkit-align-items: flex-start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-align-content: flex-start;
-      -ms-flex-line-pack: start;
-          align-content: flex-start;
-  -webkit-flex-flow: row wrap;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  align-items: flex-start;
+  align-content: flex-start;
+  flex-flow: row wrap;
 }
 .cs.silcore .two-up > * {
-  -webkit-flex: 1 1 calc(40%);
-      -ms-flex: 1 1 calc(40%);
-          flex: 1 1 calc(40%);
+  flex: 1 1 calc(40%);
 }
 .cs.silcore .two-up.row .header {
-  -webkit-flex: 1 1 calc(40%);
-      -ms-flex: 1 1 calc(40%);
-          flex: 1 1 calc(40%);
+  flex: 1 1 calc(40%);
 }
 .cs.silcore .two-up > .entry:not(.header):nth-child(4n+3),
 .cs.silcore .two-up > .entry:not(.header):nth-child(4n+4) {
