--- a/src/less/generic.less
+++ b/src/less/generic.less
@@ -8,6 +8,7 @@
 }
 .cs.sheet {
   align-content: flex-start;
+  background: #fff;
   border: 0;
   box-shadow: 1px 1px 15px #eee,
     -1px -1px 15px #eee;
