--- a/src/less/sys.cosmos.less
+++ b/src/less/sys.cosmos.less
@@ -103,6 +103,10 @@
     flex: 1 1 100%;
     .name { min-width: 40%; }
   }
+  .gear .entry > * {
+    text-align: left;
+    &.name { min-width: 20%; max-width: 20%; }
+  }
 
   .two-up {
     align-items: flex-start;
